# fastapi-image-classification

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
imgnet/: celery_instance.py  instance.py  main.py  worker.py
imgnet/models/: imagenet.py
