[tool.poetry]
name = "imgnet"
version = "0.1.0"
description = ""
authors = ["Huy Pham <keixi512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
torchvision = "^0.18.1"
fastapi = "^0.111.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
